data/derived/fa15/progs/unify/prog1617.ml.out
Characters 125-129:
  | h::t -> let x=List.mem(h,seen) in if x=true then helper(seen',t)
                                           ^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
